<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>butler_gazebo</name>
  <version>1.0.0</version>
  <description>Custom café world for Gazebo simulation.</description>
  <maintainer email="dev@example.com">Butler Dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
