<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>butler_monitor</name>
  <version>1.0.0</version>
  <description>Robot monitor and timeout manager for butler robot.</description>
  <maintainer email="dev@example.com">Butler Dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>butler_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
